--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-###################
+﻿###################
 # compiled source #
 ###################
 *.com
@@ -73,4 +73,4 @@ _[Ss]cripts
 *.nupkg
 *.ncrunchsolution
 *.dot[Cc]over
-SALIVOSA/.vs/SALIVOSA/v15/Server/sqlite3/db.lock
+*.lock
