--- a/sali-site/sali-site.csproj
+++ b/sali-site/sali-site.csproj
@@ -4,9 +4,22 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>sali_site</RootNamespace>
     <UserSecretsId>37dd1dcb-5890-4faf-b242-a59431cb4021</UserSecretsId>
+    <ApplicationIcon></ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="favicon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
 
