--- a/SaliLib/SaliLib.csproj
+++ b/SaliLib/SaliLib.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.18" />
     <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="85.0.4183.8700" />
   </ItemGroup>
 
 </Project>
