--- a/sali-site/sali-site.csproj
+++ b/sali-site/sali-site.csproj
@@ -27,6 +27,12 @@
     <ProjectReference Include="..\SaliLib\SaliLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="chromedriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 
 </Project>
