--- a/sali-site/appsettings.json
+++ b/sali-site/appsettings.json
@@ -7,9 +7,17 @@
     }
   },
   "AllowedHosts": "*",
-  "Twitter ID": "1018880692426559488",
+
+  //Social media info
   "Youtube": "https://www.youtube.com/channel/UCx-cNpNFOqI_xoBr_ft78bw?view_as=subscriber?&ab_channel=Salivosa",
   "Discord": "discord:Salivosa#7451",
   "Github": "https://github.com/Salivosa",
-  "Mail": "mailto:salvadore0ran@gmail.com"
+  "Mail": "mailto:salvadore0ran@gmail.com",
+
+  //Keys for Twitter bot
+  "Twitter ID": "*Twitter ID*",
+  "consumerKey": "*consumerKey*",
+  "consumerSecret": "*consumerSecret*",
+  "tokenValue": "*tokenValue*",
+  "tokenSecret": "*tokenSecret*"
 }
