--- a/sali-site/sali-site.csproj
+++ b/sali-site/sali-site.csproj
@@ -27,6 +27,10 @@
     <ProjectReference Include="..\SaliLib\SaliLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 
 
 </Project>
