--- a/sali-site/appsettings.json
+++ b/sali-site/appsettings.json
@@ -14,10 +14,5 @@
   "Github": "https://github.com/Salivosa",
   "Mail": "mailto:salvadore0ran@gmail.com",
 
-  //Keys for Twitter bot
-  "Twitter ID": "*Twitter ID*",
-  "consumerKey": "*consumerKey*",
-  "consumerSecret": "*consumerSecret*",
-  "tokenValue": "*tokenValue*",
-  "tokenSecret": "*tokenSecret*"
+  "twitter_id": "1148413226926956550"
 }
